fix css scrollbar

--- a/src/components/Textarea/Textaria.module.css
+++ b/src/components/Textarea/Textaria.module.css
@@ -13,7 +13,29 @@
     min-height: 144px;
     border: 1px solid var(--color-border);
     color: var(--color-text);
+    resize: none;
 }
+textarea::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+}
+textarea::-webkit-scrollbar-track {
+    background: #2c2c2c !important;
+    border-radius: 6px;
+}
+
+textarea::-webkit-scrollbar-thumb {
+    background: #d1d1d1;
+    border-radius: 15px;
+    height: 18%;
+    border: 2px solid #2c2c2c;
+    width: 50%;
+    scrollbar-width: thin;
+}
+textarea::-webkit-scrollbar-thumb:hover {
+    cursor: default;
+}
+
 .textInput:focus {
     border: var(--color-focus-border);
     outline: var(--color-focus-outline);
