--- a/src/components/Title/Title.module.css
+++ b/src/components/Title/Title.module.css
@@ -4,4 +4,5 @@
     font-weight: 700;
     margin-top: 2.5rem;
     color: var(--color-text);
+    text-align: center;
 }
